--- a/index.html
+++ b/index.html
@@ -883,6 +883,7 @@
 
             h2 {
                 font-size: 2rem;
+                margin-bottom: 30px;
             }
 
             .features-grid {
@@ -1368,7 +1369,7 @@
     <header>
         <a href="#">
             <!-- Logo source updated to use the latest provided image -->
-            <img src="arovel_logo.png" alt="ArovelCare Logo" class="logo">
+            <img src="http://googleusercontent.com/file_content/0" alt="ArovelCare Logo" class="logo">
         </a>
         <nav id="main-nav">
             <a href="#about">About Us</a>
@@ -1434,7 +1435,7 @@
             <div class="video-container">
                 <!-- Video source updated to use the provided video file -->
                 <video controls autoplay loop muted playsinline>
-                    <source src="health_facility_video.mp4" type="video/mp4">
+                    <source src="http://googleusercontent.com/file_content/1" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -1490,26 +1491,32 @@
                 <div class="feature-card aos-init" data-aos="flip-left">
                     <h3>Real-Time Disease Surveillance</h3>
                     <p>Monitor outbreaks like dengue or cholera using AI-powered analytics, enabling rapid containment and efficient resource allocation during epidemics.</p>
+                <i class="fas fa-chart-line" style="font-size: 2em; color: var(--arovel-blue); margin-top: 15px;"></i>
                 </div>
                 <div class="feature-card aos-init" data-aos="flip-right">
                     <h3>Digital Immunization Tracking</h3>
                     <p>Track vaccinations via mobile apps with automated SMS reminders for parents, significantly boosting immunization coverage and reducing preventable diseases.</p>
+                <i class="fas fa-syringe" style="font-size: 2em; color: var(--arovel-blue); margin-top: 15px;"></i>
                 </div>
                 <div class="feature-card aos-init" data-aos="flip-left">
                     <h3>Smart Supply Chain Management</h3>
                     <p>Track medicine and vaccine stocks via IoT sensors to prevent shortages, reduce waste, and ensure timely delivery to even the most remote facilities.</p>
+                <i class="fas fa-truck-medical" style="font-size: 2em; color: var(--arovel-blue); margin-top: 15px;"></i>
                 </div>
                 <div class="feature-card aos-init" data-aos="flip-right">
                     <h3>AI-Powered Insights & Recommendations</h3>
                     <p>Leverage intelligent care suggestions based on patient history and patterns, improving diagnoses, predicting outbreaks, and optimizing resource allocation.</p>
+                <i class="fas fa-brain" style="font-size: 2em; color: var(--arovel-blue); margin-top: 15px;"></i>
                 </div>
                 <div class="feature-card aos-init" data-aos="flip-left">
                     <h3>Multilingual Patient & Provider Interface</h3>
                     <p>Offer comprehensive support in both Bengali and English, ensuring accessibility and ease of use for all citizens and healthcare professionals.</p>
+                <i class="fas fa-language" style="font-size: 2em; color: var(--arovel-blue); margin-top: 15px;"></i>
                 </div>
                 <div class="feature-card aos-init" data-aos="flip-right">
                     <h3>Fraud Detection & Compliance Tools</h3>
                     <p>Implement robust systems to prevent medical fraud, ensure tax compliance, and provide audit trails, saving public funds and improving trust.</p>
+                <i class="fas fa-shield-alt" style="font-size: 2em; color: var(--arovel-blue); margin-top: 15px;"></i>
                 </div>
             </div>
         </section>
@@ -1694,7 +1701,7 @@
             <div class="footer-column">
                 <a href="#">
                     <!-- Logo source updated to use the latest provided image -->
-                    <img src="arovel_logo.png" alt="ArovelCare Logo" class="logo">
+                    <img src="http://googleusercontent.com/file_content/0" alt="ArovelCare Logo" class="logo">
                 </a>
                 <p>Centralizing healthcare through smart, connected solutions.</p>
                 <p>At ArovelCare, we strive to empower healthcare professionals</p>
