--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@
     <header>
         <a href="#">
             <!-- Logo source updated to use the latest provided image -->
-            <img src="http://googleusercontent.com/file_content/0" alt="ArovelCare Logo" class="logo">
+            <img src="arovel_logo.png" alt="ArovelCare Logo" class="logo">
         </a>
         <nav id="main-nav">
             <a href="#about">About Us</a>
@@ -1435,7 +1435,7 @@
             <div class="video-container">
                 <!-- Video source updated to use the provided video file -->
                 <video controls autoplay loop muted playsinline>
-                    <source src="http://googleusercontent.com/file_content/1" type="video/mp4">
+                    <source src="health_facility_video.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
