--- a/index.html
+++ b/index.html
@@ -883,7 +883,6 @@
 
             h2 {
                 font-size: 2rem;
-                margin-bottom: 30px;
             }
 
             .features-grid {
@@ -1699,10 +1698,12 @@
     <footer>
         <div class="footer-container">
             <div class="footer-column">
-                <a href="#">
-                    <!-- Logo source updated to use the latest provided image -->
-                    <img src="http://googleusercontent.com/file_content/0" alt="ArovelCare Logo" class="logo">
-                </a>
+                <!-- Replaced logo with a health-related icon and text -->
+                <div class="footer-logo-replacement">
+                    <i class="fas fa-heartbeat" style="font-size: 3em; color: var(--arovel-green); margin-bottom: 10px;"></i>
+                    <p style="color: var(--text-light); font-weight: 600;">ArovelCare</p>
+                    <p style="font-size: 0.85em; color: #555;">Next Gen Health Hub</p>
+                </div>
                 <p>Centralizing healthcare through smart, connected solutions.</p>
                 <p>At ArovelCare, we strive to empower healthcare professionals</p>
                 <p>with cutting-edge tools...</p>
